--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-Artists
-latest_downloaded_posts.json
-scraping_errors.txt
-latest_post_data.json
-.env
+__pycache__
+Creators
+old_functions
+download_errors.txt
+coomer_favorites.json
+kemono_favorites.json
