--- a/.github/workflows/bump.yaml
+++ b/.github/workflows/bump.yaml
@@ -24,10 +24,10 @@ jobs:
       - name: Bump version and create tag
         id: bump_and_tag
         run: |
-          current_version=$(cat version.txt)
-          new_version=$(./scripts/bump_version.sh) # Path to the script
-          git tag -a -m "Release $new_version" "$new_version"
-          echo "::set-output name=new_version::$new_version"
+            current_version=$(cat .github/scripts/version.txt)
+            new_version=$(.github/scripts/bump_version.sh) # Corrected path to the script
+            git tag -a -m "Release $new_version" "$new_version"
+            echo "::set-output name=new_version::$new_version"   
 
       - name: Push tag to repository
         run: git push origin ${{ steps.bump_and_tag.outputs.new_version }}
