Remove duplicate unset command in cleanup step

--- a/.github/workflows/create_release.yaml
+++ b/.github/workflows/create_release.yaml
@@ -69,5 +69,7 @@ jobs:
 
       - name: Cleanup
         run: |
-          git config --unset-all user.name
-          git config --unset-all user.email
+              git config --unset-all user.name
+              git config --unset-all user.email
+        shell: /usr/bin/bash -e {0}
+          
