--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -14,12 +14,21 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4.1.0
 
       - name: Set up Git
         run: |
           git config --global user.name "2000GHz"
           git config --global user.email "59731892+2000GHz@users.noreply.github.com"
+
+      - name: Check current directory and contents
+        run: |
+            pwd
+            ls -la
+  
+      - name: Ensure bump_version.sh has execute permissions
+        run: chmod +x ./scripts/bump_version.sh
+
 
       - name: Bump version and create tag
         id: bump_and_tag
@@ -31,6 +40,8 @@ jobs:
 
       - name: Push tag to repository
         run: git push origin ${{ steps.bump_and_tag.outputs.new_version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Compress files for the release
         run: |
@@ -39,7 +50,7 @@ jobs:
           zip -r "${release_name}.zip" user_search.py requirements.txt README.md json_handling.py install_windows.ps1 install_macos.sh install_linux.sh get_favorites.py duplicate_finder.py download.py
 
       - name: Upload release artifacts
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3.1.3
         with:
           name: ${{ steps.bump_and_tag.outputs.new_version }}
           path: |
@@ -55,7 +66,7 @@ jobs:
           
       - name: Create GitHub Release
         id: create_release
-        uses: softprops/action-gh-release@v1
+        uses: softprops/action-gh-release@v0.1.15
         with:
           files: |
               "${release_name}.7z"
@@ -63,8 +74,3 @@ jobs:
           body: ${{ steps.create_release_notes.outputs.release_notes }}
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-      - name: Cleanup
-        run: |
-          git config --unset-all user.name
-          git config --unset-all user.email
