--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -61,9 +61,11 @@ jobs:
       - name: Create Release Notes
         id: create_release_notes
         run: |
+          cd .github
           # Read release notes and save them to a variable
-          release_notes=$(cat .github/release_notes.md)
+          release_notes=$(cat release_notes.md)
           echo "::set-output name=release_notes::$release_notes"
+          cd /home/runner/work/OfflineParty/OfflineParty
           
       - name: Create GitHub Release
         id: create_release
