Handling existing tags

--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -36,10 +36,16 @@ jobs:
           git tag -a -m "Release v$new_version" "v$new_version"
           echo "::set-output name=new_version::v$new_version"
 
-      - name: Push tag to repository
-        run: git push origin ${{ steps.bump_and_tag.outputs.new_version }}
+      - name: Check and Push tag
+        run: |
+          if ! git rev-parse ${{ steps.bump_and_tag.outputs.new_version }} >/dev/null 2>&1; then
+            git push origin ${{ steps.bump_and_tag.outputs.new_version }}
+          else
+            echo "Tag ${{ steps.bump_and_tag.outputs.new_version }} already exists. Not pushing the tag again."
+          fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        
 
       - name: Compress files for the release
         id: compress_files
