--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -68,10 +68,10 @@ jobs:
         id: create_release_notes
         run: |
           cd .github
-          # Read release notes and save them to a variable
-          release_notes=$(cat release_notes.md)
+          release_notes=$(cat release_notes.md | jq -Rs .)
           echo "::set-output name=release_notes::$release_notes"
           cd /home/runner/work/OfflineParty/OfflineParty
+          
           
       - name: Create GitHub Release
         id: create_release
@@ -81,6 +81,6 @@ jobs:
           files: |
               ${{ steps.compress_files.outputs.release_name }}.7z
               ${{ steps.compress_files.outputs.release_name }}.zip
-          body: ${{ steps.create_release_notes.outputs.release_notes }}
+          body: ${{ fromJSON(steps.create_release_notes.outputs.release_notes) }}
         env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
