--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -3,10 +3,10 @@ name: Create Release
 on:
   push:
     branches:
-      - dev
+      - main
   pull_request:
     branches:
-      - dev
+      - main
 
 jobs:
   create_release:
