--- a/.github/workflows/create-release.yaml
+++ b/.github/workflows/create-release.yaml
@@ -21,12 +21,18 @@ jobs:
           git config --global user.name "2000GHz"
           git config --global user.email "59731892+2000GHz@users.noreply.github.com"
 
-      - name: Check current directory and contents
+      - name: Check affected files
+        id: check_files
         run: |
-            pwd
-            ls -la
-  
+          changed_files=$(git diff --name-only HEAD^ HEAD)
+          if echo "$changed_files" | grep -qvE '^\.github/'; then
+            echo "::set-output name=github_only_changes::false"
+          else
+            echo "::set-output name=github_only_changes::true"
+          fi
+
       - name: Bump version and create tag
+        if: steps.check_files.outputs.github_only_changes == 'false'
         id: bump_and_tag
         run: |
           cd .github/scripts
@@ -36,7 +42,17 @@ jobs:
           git tag -a -m "Release v$new_version" "v$new_version"
           echo "::set-output name=new_version::v$new_version"
 
+      - name: Commit and push updated version.txt
+        if: steps.check_files.outputs.github_only_changes == 'false'
+        run: |
+          git add .github/scripts/version.txt
+          git commit -m "Bump version to ${{ steps.bump_and_tag.outputs.new_version }}"
+          git push origin HEAD:${{ github.ref }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Check and Push tag
+        if: steps.check_files.outputs.github_only_changes == 'false'
         run: |
           if ! git rev-parse ${{ steps.bump_and_tag.outputs.new_version }} >/dev/null 2>&1; then
             git push origin ${{ steps.bump_and_tag.outputs.new_version }}
@@ -45,9 +61,9 @@ jobs:
           fi
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
 
       - name: Compress files for the release
+        if: steps.check_files.outputs.github_only_changes == 'false'
         id: compress_files
         run: |
           cd /home/runner/work/OfflineParty/OfflineParty
@@ -57,6 +73,7 @@ jobs:
           echo "::set-output name=release_name::$release_name"
 
       - name: Upload release artifacts
+        if: steps.check_files.outputs.github_only_changes == 'false'
         uses: actions/upload-artifact@v3.1.3
         with:
           name: ${{ steps.bump_and_tag.outputs.new_version }}
@@ -65,15 +82,16 @@ jobs:
             ${{ steps.compress_files.outputs.release_name }}.zip
 
       - name: Create Release Notes
+        if: steps.check_files.outputs.github_only_changes == 'false'
         id: create_release_notes
         run: |
           cd .github
           release_notes=$(cat release_notes.md | jq -Rs .)
           echo "::set-output name=release_notes::$release_notes"
           cd /home/runner/work/OfflineParty/OfflineParty
-          
-          
+
       - name: Create GitHub Release
+        if: steps.check_files.outputs.github_only_changes == 'false'
         id: create_release
         uses: softprops/action-gh-release@v0.1.15
         with:
